<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gf_daniel.mioapp.Registrarse"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/nombre_de_usuario"
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/lightgray"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/correo_del_usuario"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/correo_del_usuario"
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/lightgray"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/contrasena_del_usuario"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="172dp" />

    <EditText
        android:id="@+id/contrasena_del_usuario"
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/lightgray"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrarse"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="227dp" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registarse"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginBottom="174dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/lightgray"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logmio"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/nombre_de_usuario"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.787"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
