<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gf_daniel.mioapp.IniciarSesion"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/correo_del_usuario"
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/lightgray"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/contrasena_del_usuario"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/contrasena_del_usuario"
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/lightgray"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_iniciar_sesion"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginBottom="188dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/lightgray"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logmio"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/correo_del_usuario"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.56"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
